# LLM_07

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  demo.py  project.py  pyproject.toml  requirements.txt
data/: 100011.json  100012.json  100013.json  100014.json  100015.json  long_distance_scat.json  sample_scat.json
data/config/: default_config.yaml
data/memory/: faiss_index.idx  (+2 more)
docs/: architecture.md  complete_cdr_implementation.md  memory_system.md  ollama_integration.md  research_grade_metrics.md
scripts/: setup_environment.py
src/: __init__.py
tests/: 5_minute_interval_summary.py  BINARY_NUMPY_PARSING_FIX.md  CLI_FIXES_SUMMARY.md  CRE_debug.py  ENHANCED_CDR_SUMMARY.md  FIXES_IMPLEMENTATION_SUMMARY.md  LLM_ENHANCEMENT_SUMMARY.md  LLM_IMPROVEMENTS_SUMMARY.md  MEMORY_IMPLEMENTATION_SUMMARY.md  PARAMETER_ALIGNMENT_SUMMARY.md  ROUTE_AWARE_CDR_IMPLEMENTATION.md  SCAT_DESTINATION_IMPLEMENTATION.md  analyze_trajectory_results.py  bluesky_binary_parser.py  bluesky_direct_access.py  bluesky_internal_client.py  bluesky_startup_fix.py  config_examples.py  conftest.py  debug_aircraft_movement.py  debug_aircraft_persistence.py  debug_aircraft_states.py  debug_bluesky_protocol.py  debug_direct_bluesky.py  debug_ollama_response.py  debug_pos_response.py  demo_llm_improvements.py  demo_memory_integration.py  demo_scat_destination.py  diagnostic_ollama.py  memory_utils.py  ollama_example.py  quick_autopilot_test.py  quick_bluesky_test.py  quick_test_ollama.py  real_bluesky_solution.py  requirements.txt  scat_bluesky_integration.py  screen_dummy.py  simple_movement_test.py  (+64 more)
(+30 files in other folders)
